infra/k8s/Log-depl.yaml
# deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: log
spec:

  replicas: 1
  selector:
    matchLabels:
      app: log
  template:
    metadata:
      labels:
        app: log
    spec:
      containers:
        - name: log
          image: sha256:1a7604ff8c15957783751b1219e9d5c074e23b94e185fb821f0bb5c30cd5f29b
