infra/k8s/User-depl.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: sha256:d1bd57dfac47dd7ab6c990265870057ef1d75d5caf88bbf5fecaae68e639dcb6
