infra/k8s/Event-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event
  template:
    metadata:
      labels:
        app: event
    spec:
      containers:
        - name: event
          image: saadan1234/event
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: event-serv
spec:
  type: ClusterIP
  selector:
    app: event
  ports:
  - name: event
    protocol: TCP
    port: 5000
    targetPort: 5000
