infra/k8s/Stg-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stg-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stg
  template:
    metadata:
      labels:
        app: stg
    spec:
      containers:
        - name: stg
          image: saadan1234/stg
          ports:
            - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: stg-serv
spec:
  type: ClusterIP
  selector:
    app: stg
  ports:
  - name: stg
    protocol: TCP
    port: 5003
    targetPort: 5003
