infra/k8s/Usage-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usage-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usage
  template:
    metadata:
      labels:
        app: usage
    spec:
      containers:
        - name: usage
          image: saadan1234/usage
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: usage-serv
spec:
  type: ClusterIP
  selector:
    app: usage
  ports:
  - name: usage
    protocol: TCP
    port: 5002
    targetPort: 5002
