infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-serv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: imagegallery.com
      http:
        paths:
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: user-serv
                port:
                  number: 5001
          - path: /register
            pathType: Prefix
            backend:
              service:
                name: user-serv
                port:
                  number: 5001
          - path: /signup
            pathType: Prefix
            backend:
              service:
                name: stg-serv
                port:
                  number: 5003
          - path: /
            pathType: Prefix
            backend:
              service:
                name: view-serv
                port:
                  number: 3000
